Refactor code structure and remove redundant functions for improved readability and maintainability

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,8 @@
       "request": "launch",
       "program": "${file}",
       "env": {
-        "PYTHONPATH": "${workspaceFolder}"
+        "PYTHONPATH": "${workspaceFolder}",
+        "NLTK_DATA": "F:\\ai\\nltk_data"
       }
     }
   ]
