--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = []
+dependencies = [
+    "konlpy>=0.6.0", # Korean Natural Language Processing
+    "nltk>=3.9.1", # Natural Language Toolkit
+]
