--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
+  "github.copilot.chat.commitMessageGeneration.instructions": [
+    {
+      "file": ".github/git-commit-instructions.md"
+    }
+  ],
   "python.testing.pytestArgs": [
     "tests"
   ],
