feat(dependencies): ✨ scikit-learn 패키지 추가 및 관련 코드 수정
- pyproject.toml에 scikit-learn 패키지를 추가하였습니다.
- split_data_example.py 파일에서 train_test_split을 사용하여 데이터 분리 예제를 추가하였습니다.
- uv.lock 파일에 scikit-learn 및 관련 의존성을 추가하였습니다.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,4 +11,5 @@ dependencies = [
     "numpy>=2.3.1", # 수치 데이터를 다루는 파이썬 패키지
     "pandas>=2.3.1", # 파이썬 데이터 처리를 위한 라이브러리
     "pyqt6>=6.9.1", # matplotlib을 시각화할 때 사용
+    "scikit-learn>=1.7.1", # 머신러닝을 위한 파이썬 패키지
 ]
