feat(env): ✨ .env.mac 파일 추가 및 설정 수정
- .env.mac 파일을 새로 추가하여 macOS 환경 설정을 반영함
- settings.json에서 macOS 환경 파일 경로를 .env에서 .env.mac으로 변경

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,7 @@
   },
   "terminal.integrated.env.osx": {
     "PYTHONPATH": "${workspaceFolder}",
-    "python.envFile": "${workspaceFolder}/.env"
+    "python.envFile": "${workspaceFolder}/.env.mac"
   },
   "terminal.integrated.env.windows": {
     "PYTHONPATH": "${workspaceFolder}",
