--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,9 @@ dependencies = [
     "numpy>=2.3.1", # 수치 데이터를 다루는 파이썬 패키지
     "pandas>=2.3.1", # 파이썬 데이터 처리를 위한 라이브러리
     "pyqt6>=6.9.1", # matplotlib을 시각화할 때 사용
-    "scikit-learn>=1.7.1", # 머신러닝을 위한 파이썬 패키지
-    "torch~=2.7.1"  # torch
+    "scikit-learn>=1.7.1", # 머신러닝을 위한 파이썬 패키지 # torch
+    "torch~=2.7.1",
+    "torchvision>=0.22.1",
 ]
 
 # torch CUDA index
@@ -24,5 +25,8 @@ explicit = true
 [tool.uv.sources]
 # if the system is not macOS, use the CUDA index
 torch = [
+  { index = "pytorch-cu118", marker = "sys_platform != 'darwin'" }
+]
+torchvision = [
   { index = "pytorch-cu118", marker = "sys_platform != 'darwin'" }
 ]
